// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/platform/azure/util getProjectAndRepo should return the object with project and repo 1`] = `
{
  "project": "prjName",
  "repo": "myRepoName",
}
`;

exports[`modules/platform/azure/util getProjectAndRepo should return the object with same strings 1`] = `
{
  "project": "myRepoName",
  "repo": "myRepoName",
}
`;

exports[`modules/platform/azure/util getRenovatePRFormat should be formated (closed v2) 1`] = `
{
  "bodyStruct": {
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  },
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "number": undefined,
  "sourceBranch": undefined,
  "sourceRefName": undefined,
  "state": "merged",
  "status": 3,
  "targetBranch": undefined,
}
`;

exports[`modules/platform/azure/util getRenovatePRFormat should be formated (closed) 1`] = `
{
  "bodyStruct": {
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  },
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "number": undefined,
  "sourceBranch": undefined,
  "sourceRefName": undefined,
  "state": "closed",
  "status": 2,
  "targetBranch": undefined,
}
`;

exports[`modules/platform/azure/util getRenovatePRFormat should be formated (not closed) 1`] = `
{
  "bodyStruct": {
    "hash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  },
  "createdAt": undefined,
  "displayNumber": "Pull Request #undefined",
  "number": undefined,
  "sourceBranch": undefined,
  "sourceRefName": undefined,
  "state": "open",
  "status": 1,
  "targetBranch": undefined,
}
`;

exports[`modules/platform/azure/util getStorageExtraCloneOpts should configure basic auth 1`] = `
{
  "-c": "http.extraheader=AUTHORIZATION: basic dXNlcjpwYXNz",
}
`;

exports[`modules/platform/azure/util getStorageExtraCloneOpts should configure bearer token 1`] = `
{
  "-c": "http.extraheader=AUTHORIZATION: bearer token",
}
`;

exports[`modules/platform/azure/util getStorageExtraCloneOpts should configure personal access token 1`] = `
{
  "-c": "http.extraheader=AUTHORIZATION: basic OjEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEyMzQ1Njc4OTAxMjM0NTY3OHRlc3Q=",
}
`;

exports[`modules/platform/azure/util max4000Chars should be the same 1`] = `"Hello"`;
